# email-agent

./: .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1c16e07c92f8_initial_migration.py
apps/chats_app/: app_tasks.py  ws.py
services/: gmail_fetch.py  gmail_watch.py  google_apis.py  google_auth.py  pubsub_pull.py  schemas.py
settings/: app_tasks.py  classifier.py  config.py  database.py  dependencies.py  models.py  my_redis.py  my_taskiq.py  my_websocket.py
templates/: index.html
utils/: enums.py  logger.py  validators.py
